        'ut' to indicate utility and clearly avoid any ambiquity with legacy C functions
        such as 'strcpy', etc.  The prefix was changed to better indicate the nature
        of function (i.e., it's a utility)
     -- renamed 'lcParser' to 'edlParser' to indicate file format being parsed. Include
        header file changed from 'Parser.h' to 'edl_parser.h' as this is a function, not
		a class declaration

   Thread classes
     -- platform specific code associated with the thread classes has been restructured
        to properly include files correctly.  Before, the Thread.cpp file was including
        platform specific class methods into the oe::base namespace.  But the included
        file for linux was including other includes, such as, <signal.h>. So declarations
        were being imported into the oe::base namespace. Surprisingly, no apparent errors
        resulted. Nevertheless the code has been restructured more properly.

--------------------------------------------------------------------------------
dafif library

--------------------------------------------------------------------------------
dis library

--------------------------------------------------------------------------------
glut library

--------------------------------------------------------------------------------
graphics library

   -- previously named the 'basicGL' library

--------------------------------------------------------------------------------
hla library

   -- new library - code to support HLA interoperability interface

--------------------------------------------------------------------------------
instruments library

--------------------------------------------------------------------------------
iodevice library

   -- previously named the 'ioDevice' library

--------------------------------------------------------------------------------
linearsystem library

   -- previously named the 'linearSys' library
